# claude-agent-sdk

./: .clippy.toml  .gitignore  .gitignore_opt  AGENT_SKILLS_EXPANSION_COMPLETE.md  AGENT_SKILLS_EXPANSION_PLAN.md  ANALYSIS_OFFICIAL_SDK_COMPARISON.md  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  BEST_PRACTICES.md  BUILD_RS_GUIDE.md  BUILD_RS_IMPLEMENTATION_REPORT.md  CARGO_TEST_REPORT.md  CLAUDE_CODE_SKILLS_ANALYSIS.md  CLAUDE_CODE_SKILLS_OPTIMIZATION_COMPLETE.md  CODE_ANALYSIS_REPORT.md  CODE_QUALITY_DEEP_ANALYSIS.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.workspace  DOCS_INDEX.md  DOCUMENTATION_COMPLETION_REPORT.md  ENHANCED_SKILL_EXAMPLES_REPORT.md  EXAMPLE_TEST_REPORT.md  FILES_CHANGED.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_TEST_REPORT.md  FINAL_VERIFICATION_REPORT.md  GETTING_STARTED.md  IMPLEMENTATION_CHANGES.md  IMPLEMENTATION_COMPLETE_REPORT.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  Justfile  LICENSE.md  ORCHESTRATION_IMPLEMENTATION_REPORT.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETE_SUMMARY.md  PHASE2_COMPLETION_REPORT.md  (+69 more)
.ralph/: current-events  current-loop-id  events-20260205-071149.jsonl  events-20260219-001602.jsonl  events-20260219-002710.jsonl  events-20260219-004206.jsonl  events-20260219-023003.jsonl  (+21 more)
investintel-agent/: ADVANCED_IMPLEMENTATION_REPORT.md  Cargo.toml  Cargo.toml.bak  FINAL_CHECKLIST.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY_CN.md  PHASE1_2_SUMMARY.md  PHASE1_3_SKILLS_SUMMARY.md  PHASE2_TEAMS_SUMMARY.md  PHASE7_COMPLETE_REPORT.md  PLAN2_FINAL_SUMMARY.md  PLAN2_VALIDATION_REPORT.md  PLAN6_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_IMPLEMENTATION.md  README_INVESTMENT_ASSISTANT.md  error.rs  lib.rs  logging.rs  orchestration.rs  partnership_demo.rs  skills_executor.rs  skills_integration.rs  verify_implementation.sh  完整API文档.md  最终实现完成报告.md  最终实现报告_中文.md  第二轮实现总结_中文.md
investintel-agent/.claude/agents/: advisor-agent.md  analyst-agent.md  news-analyst.md  options-analyst.md  research-agent.md  risk-agent.md  sentiment-agent.md  strategy-executor.md  technical-analyst.md
investintel-agent/.claude/skills/alpha-vantage/: SKILL.md
investintel-agent/.claude/skills/backtesting/: SKILL.md
investintel-agent/.claude/skills/backtesting-engine/: SKILL.md
investintel-agent/.claude/skills/data-fusion/: SKILL.md
investintel-agent/.claude/skills/fundamental-analysis/: SKILL.md
investintel-agent/.claude/skills/investment-analyst/: SKILL.md
investintel-agent/.claude/skills/lstm-prediction/: SKILL.md
investintel-agent/.claude/skills/market-research/: SKILL.md
investintel-agent/.claude/skills/momentum-trading/: SKILL.md
investintel-agent/.claude/skills/options-trading/: SKILL.md
investintel-agent/.claude/skills/portfolio-management/: SKILL.md
investintel-agent/.claude/skills/portfolio-optimization/: SKILL.md
investintel-agent/.claude/skills/realtime-monitor/: SKILL.md
investintel-agent/.claude/skills/reinforcement-learning/: SKILL.md
investintel-agent/.claude/skills/reporting/: SKILL.md
investintel-agent/.claude/skills/risk-analysis/: SKILL.md
investintel-agent/.claude/skills/risk-analytics/: SKILL.md
investintel-agent/.claude/skills/sentiment-analysis/: SKILL.md
investintel-agent/.claude/skills/strategy-planner/: SKILL.md
investintel-agent/.claude/skills/technical-analysis/: SKILL.md
investintel-agent/.claude/skills/technical-indicators/: SKILL.md
investintel-agent/.claude/skills/trading-execution/: SKILL.md
investintel-agent/.claude/skills/yahoo-finance/: SKILL.md
investintel-agent/agents/: assistant.rs  dividend_investor.rs  kelly_position.rs  market_data.rs  mod.rs  munger_framework.rs  parallel_data.rs  portfolio_manager.rs  trading_advisor.rs  value_investment.rs
investintel-agent/app/: Cargo.toml  advanced_tools.rs  agents.rs  backtest.rs  financial_sentiment.rs  hierarchical_orchestration.rs  interactive_advisor.rs  investment_engine.rs  investment_hooks.rs  lib.rs  local_llm.rs  main.rs  main_complete.rs  main_enhanced.rs  main_v2.rs  market_data.rs  market_monitor.rs  mod.rs  orchestration.rs  orchestrators.rs  plan2_validation.rs  sdk_examples.rs  storage.rs  strategy_engine.rs  streaming.rs  tools.rs  visualization.rs  websocket.rs
investintel-agent/app/data/: mod.rs  yahoo.rs
investintel-agent/app/skills/: mod.rs  skill_agent.rs
investintel-agent/app/teams/: analysis_team.rs  mod.rs  research_team.rs  risk_team.rs  trading_team.rs
investintel-agent/app/value_frameworks/: buffett.rs  graham.rs  integrated.rs  mod.rs  munger.rs
investintel-agent/backtest/: engine.rs  metrics.rs  mod.rs  portfolio.rs  strategy.rs
investintel-agent/data/: alpha_vantage.rs  fusion.rs  mod.rs  quality.rs  websocket.rs  websocket_enhanced.rs  yahoo.rs
investintel-agent/examples/: orchestration_demo.rs  skills_demo.rs  skills_integration_example.rs
investintel-agent/mcp/: client.rs  config.rs  mod.rs
investintel-agent/partnership/: Cargo.toml
investintel-agent/partnership/src/: agreement.rs  agreement_test.rs  ai_team.rs  ai_team_test.rs  builder.rs  builder_test.rs  lib.rs  mcp_gateway.rs  portfolio.rs  portfolio_test.rs  types.rs  types_test.rs
investintel-agent/persistence/: config.rs  history.rs  mod.rs  preferences.rs
investintel-agent/strategies/: dqn_agent.rs  lstm_predictor.rs  mod.rs
investintel-agent/tests/: advanced_sdk_test.rs  alpha_vantage_test.rs  e2e_integration_test.rs  final_integration_test.rs  full_sdk_integration_test.rs  fusion_test.rs  hierarchical_test.rs  integration_advanced_test.rs  integration_complete_test.rs  integration_test.rs  investment_assistant_test.rs  mcp_gateway_test.rs  persistence_test.rs  plan2_validation_test.rs  real_sdk_integration_test.rs  skill_agent_integration_test.rs  skills_integration_test.rs  skills_test.rs  websocket_test.rs  yahoo_finance_test.rs
investintel-agent/trading/: binance.rs  emergency_stop.rs  mod.rs  okx.rs  order_manager.rs
(+330 files in other folders)
