[package]
name = "claude-agent-sdk-rs"
version = "0.6.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT"
documentation = "https://docs.rs/claude-agent-sdk-rs"
repository = "https://github.com/louloulin/claude-agent-sdk"
homepage = "https://github.com/louloulin/claude-agent-sdk"
description = "Rust SDK for Claude Code CLI with bidirectional streaming, hooks, custom tools, plugin support, and Agent Skills - 100% feature parity with Python SDK"
readme = "README.md"
categories = ["development-tools", "api-bindings", "asynchronous"]
keywords = ["claude", "ai", "agent", "anthropic", "llm"]
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
# Async runtime
tokio = { version = "1.48", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "io-util",
  "sync",
  "time",
] }

# Async traits
async-trait = "0.1"
futures = "0.3"
pin-project = "1.1"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_norway = { version = "0.9", optional = true }

# Semantic versioning
semver = { version = "1.0", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Path utilities
path-absolutize = "3.1"

# Logging
tracing = "0.1"

# UUID generation
uuid = { version = "1.19", features = ["v4"] }
typed-builder = "0.23.2"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Macro utilities
paste = "1.0"

# File system monitoring (optional, for hot reload)
notify = { version = "7.0", optional = true }
notify-debouncer-mini = { version = "0.5", optional = true }

# WebAssembly sandboxing (optional, for secure skill execution)
wasm-sandbox = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"
tracing-subscriber = "0.3"
criterion = "0.5"

[[bench]]
name = "benchmark_suite"
harness = false

[features]
default = []
yaml = ["serde_norway"]
hot-reload = ["notify", "notify-debouncer-mini"]
sandbox = ["wasm-sandbox"]

# Performance optimization profiles
[profile.dev]
opt-level = 0           # No optimization for fast compilation
debug = true            # Full debug info
split-debuginfo = "unpacked"  # Faster linking

[profile.dev.package."*"]
opt-level = 2           # Optimize dependencies for faster builds

# Release profile with maximum optimization
[profile.release]
opt-level = 3           # Maximum optimization
lto = "fat"            # Link-time optimization across all codegen units
codegen-units = 1      # Maximum optimization at cost of compilation time
strip = true           # Remove debug symbols
panic = "abort"        # Reduce binary size
debug = false          # No debug info

# Release profile for faster compilation
[profile.release-lto]
inherits = "release"
lto = "thin"
codegen-units = 16

# Profile for benchmarking
[profile.bench]
inherits = "release"
debug = true           # Keep debug info for profiling

# Test profile with some optimizations
[profile.test]
opt-level = 1          # Some optimization for faster tests
debug = true

# Distribution profile - smallest binary size
[profile.dist]
inherits = "release"
opt-level = "s"         # Optimize for size
lto = "fat"
strip = true
