[package]
name = "claude-agent-sdk-rs"
version = "0.1.0"
edition = "2024"
description = "Rust SDK for interacting with Claude Code CLI"
license = "MIT"

[lib]
name = "claude_agent_sdk_rs"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
typed-builder = "0.18"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
indexmap = "2.2"
serde_yaml = { version = "0.9", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
yaml = ["serde_yaml"]

[workspace]
members = ["investintel-agent"]
resolver = "2"
