[package]
name = "investintel-agent"
version = "0.1.0"
edition = "2021"
description = "InvestIntel AI - 智能投资助手基于Claude Agent SDK"
authors = ["InvestIntel AI Team"]
license = "MIT"

[features]
default = []
ml = ["tch"]

[lib]
name = "investintel_agent"
path = "lib.rs"

[[bin]]
name = "invest_cli"
path = "bin/invest_cli.rs"

[[bin]]
name = "partnership-demo"
path = "partnership_demo.rs"

[dependencies]
claude-agent-sdk-rs = { path = "..", features = ["yaml"] }
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
futures = "0.3"
thiserror = "1.0"
tracing = "0.1"

# App module dependency
investintel-agent-app = { path = "app" }

# Partnership module
partnership = { path = "partnership" }

# Phase 3: Trading dependencies (新增)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Phase 2: ML dependencies (optional, for ML features)
tch = { version = "0.15", optional = true }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
