[workspace]

[package]
name = "investintel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "investintel"
path = "main.rs"

[[bin]]
name = "investintel-v2"
path = "main_v2.rs"

[dependencies]
claude-agent-sdk-rs = { path = "../.." }
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
libsql = "0.5"
url = "2.5"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio-tungstenite = "0.23"
rand = "0.8"
plotters = "0.3"
resvg = "0.42"
regex = "1.10"
pin-project = "1.0"

[dev-dependencies]
tokio-test = "0.4"
