[package]
name = "investintel-agent-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "investintel_agent_app"
path = "lib.rs"

[[bin]]
name = "investintel"
path = "main.rs"

[[bin]]
name = "investintel-v2"
path = "main_v2.rs"

[[bin]]
name = "plan2_validation"
path = "plan2_validation.rs"

[dependencies]
claude-agent-sdk-rs = { path = "../.." }
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
libsql = "0.5"
url = "2.5"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
rand = "0.8"
plotters = "0.3"
resvg = "0.42"
regex = "1.10"
pin-project = "1.0"

[dev-dependencies]
tokio-test = "0.4"
